# esp32-8048S043-lvgl9

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  esp_logo.c  esp_text.c  hardware.h  idf_component.yml  lv_conf.h  lvgl9.c  lvgl_demo_ui.c
